# My_Campus

./: .gitignore  DEPLOY.md  GRADING.md  HACKATHON_DECISION.md  IMPLEMENTATION.md  PRESENTATION.md  PROGRESS.md  README.md  gitignore  hackathon.pen
backend/: IMPLEMENTATION.md  pyproject.toml  requirements.txt  seed_data.py
backend/app/: config.py  database.py  main.py
backend/app/models/: __init__.py  building.py  checkin.py  class_.py  enrollment.py  friend.py  location.py  user.py
backend/app/routers/: auth.py  checkin.py  classes.py  emergency.py  location.py
backend/app/schemas/: checkin.py  class_.py  location.py  user.py
frontend/: IMPLEMENTATION.md  index.html  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts
frontend/app/: globals.css  layout.jsx  page.jsx  page.tsx
frontend/app/classes/: page.jsx
frontend/app/friends/: page.tsx
frontend/app/login/: page.jsx
frontend/app/profile/: page.tsx
frontend/app/safety/: page.jsx
frontend/components/: BottomNav.jsx  ClassCard.tsx
frontend/components/ui/: button.tsx  card.tsx  input.tsx
frontend/lib/: api.js  api.ts  auth.tsx
frontend/public/: manifest.json
frontend/src/: App.tsx  index.css
frontend/src/components/: ClassCard.tsx  DashboardMap.tsx  EmergencyOverlay.tsx  HeadcountRing.tsx  Navbar.tsx  OccupancyBar.tsx
frontend/src/context/: AppContext.tsx
frontend/src/lib/: api.ts  campusData.ts  pathfinding.ts
frontend/src/pages/: ClassDetail.tsx  ClassPulse.tsx  Dashboard.tsx  Emergency.tsx  Login.tsx  Navigate.tsx  Profile.tsx  Register.tsx
(+1 files in other folders)
